Fix alignment in userpage and fix footer.

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -6,9 +6,14 @@ body {
     background-attachment: fixed;
     background-size: cover;
     margin: 0;
+    min-height: 100dvh;
 }
 
-root {
+#root {
+    min-height: inherit;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
     width: 100%;
 }
 
@@ -54,6 +59,7 @@ h2 {
     gap: 50px;
     margin: 0 auto;
     width: 100%;
+    justify-items: center;
 }
 
 .hero {
