--- a/frontend/src/CharacterPage.css
+++ b/frontend/src/CharacterPage.css
@@ -6,6 +6,7 @@
     background-color: rgba(0, 0, 0, 0.8);
     border-radius: 15px;
     flex-direction: row;
+    margin-bottom: 50px;
 }
 
 #char-content {
