--- a/frontend/src/Footer.css
+++ b/frontend/src/Footer.css
@@ -4,6 +4,7 @@ footer {
     justify-content: center;
     justify-items: center;
     width: 100%;
+    margin-top: auto;
 }
 
 #footer-content {
