--- a/frontend/src/Userpage.css
+++ b/frontend/src/Userpage.css
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 #user-line {
     display: flex;
     align-self: center;
